--- a/Lab Problems/lab_3/style.css
+++ b/Lab Problems/lab_3/style.css
@@ -50,10 +50,11 @@ p, li {
 
 /* || header layout */
 
-header {
+.header {
   margin-bottom: 10px;
   display: flex;
   flex-flow: row wrap;
+  float: left;
 }
 
 body > * {
